# SQDeChain

./: Dockerfile  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: default.yaml  smoke.yaml  zenodo_17369377.yaml
data/: README.md
data/sample/: behavior_logs.csv  image_manifest.csv  text_reviews.csv
docs/: DATA_SCHEMA.md  GITHUB_REPOSITORY_SUGGESTIONS.md  GITHUB_UPLOAD_CHECKLIST.md  METHOD_ALIGNMENT.md  REPRODUCIBILITY.md
results/smoke/: ablation_study.csv  adversarial_tests.csv  config_snapshot.json  consensus_baselines.csv  end_to_end_benchmarks.csv  image_scores.csv  kpi_scores.csv  model_metrics_summary.csv  run_metadata.json  scalability_latency.csv  text_metrics.csv  text_scores.csv  token_distribution.csv  token_fairness.csv
results/smoke_behavior_test/: behavior_metrics.csv  behavior_scores.csv
results/smoke_image_test/: image_metrics.csv  image_scores.csv
scripts/: download_zenodo.py  make_publication_figures.py  make_synthetic_data.py  prepare_data.py  run_ablation.py  run_all_experiments.py  run_benchmarks.py  run_kpi_pipeline.py  simulate_blockchain.py  train_behavior.py  train_image.py  train_text.py
src/sqdechain/: __init__.py  config.py  kpis.py  metrics.py
src/sqdechain/blockchain/: attacks.py  consensus.py  racs.py  simulator.py  tokenomics.py
src/sqdechain/data/: loaders.py  synthetic.py  zenodo.py
src/sqdechain/experiments/: ablation.py  pipeline.py
src/sqdechain/models/: behavior.py  image.py  text.py
tests/: test_consensus.py  test_data.py  test_kpis.py
(+1 files in other folders)
