[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqdechain"
version = "0.1.0"
description = "SQDeChain / SQcoin hybrid AI-blockchain framework for Tourism 5.0"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "SQDeChain contributors"}]
license = {text = "MIT"}
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
  "tqdm>=4.66",
  "Pillow>=10.0",
  "requests>=2.31",
  "torch>=2.0"
]

[project.optional-dependencies]
full = [
  "transformers>=4.40",
  "accelerate>=0.29",
  "datasets>=2.19",
  "timm>=0.9",
  "opencv-python>=4.8"
]
dev = ["pytest>=7.4", "ruff>=0.5", "mypy>=1.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
